2) Complete the List Views , Add View All Link

--- a/TechJobsMVC/Views/Shared/_Layout.cshtml
+++ b/TechJobsMVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - TechJobsMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/Custom.css" />
+
+
 </head>
 <body>
     <header>
