--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -7,7 +7,7 @@
     <tr>
         @foreach(var column in ViewBag.columns)
         {
-            <th>@column.Value</th>
+            <th>@column.Value!!!</th> // /list  table header
         }
     </tr>
     <tr>
@@ -15,7 +15,10 @@
             //TODO #2: Complete the View Jobs By Category Table
         }
 
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
+
+        <td>
+            
+            <a asp-controller="List" asp-action="Jobs" asp-route-column="all" asp-route-value=all>All Jobs</a></td> @* Feel free to remove or modify this element if necessary. *@
         @foreach (var category in ViewBag.tableChoices)
         {
             <td>
@@ -23,7 +26,7 @@
                     @foreach (var item in category.Value)
                     {
                         <li>
-                            <a asp-controller="List" asp-action="Jobs" asp-route-column="@category.Key" asp-route-value="@item">@item</a>
+                           <a asp-controller="List" asp-action="Jobs" asp-route-column="@category.Key" asp-route-value="@item">@item</a>
                         </li>
                     }
                 </ul>
