--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -1,10 +1,83 @@
 ﻿<div class="container body-content">
 
-    <h1>@ViewBag.title</h1>
+    <h1>@ViewBag.title !!!</h1>
 
     @{
         //TODO #1: Use a loop to display job results in a table.
     }
+<table id="customers">
+    @*<tr>
+            <th>Name</th>
+            <th>Employer</th>
+            <th>Location</th>
+            <th>PositionType</th>
+            <th>CoreCompetency</th>
+
+        </tr>*@
+    @foreach (var job in ViewBag.jobs)
+    {
 
 
+        @*<tr>
+                <td>Id: @job.Id</td>
+
+            </tr>
+            <tr>
+                <td> Name: @job.Name</td>
+
+            </tr>
+
+
+            <tr>
+                <td>Location: @job.Location</td>
+
+            </tr>
+
+            <tr>
+                <td>Employee: @job.Employer</td>
+
+            </tr>
+
+            <tr>
+                <td>Position Type: @job.PositionType</td>
+
+            </tr>
+
+            <tr>
+                <td>Core Competency: @job.CoreCompetency</td>
+
+            </tr>
+            <tr>
+                <td></td>
+
+            </tr>*@
+
+        <tr>
+            <td>
+                <p>Id: @job.Id</p>
+                <p>Name: @job.Name</p>
+                <p>Location: @job.Location</p>
+                <p>Employee: @job.Employer</p>
+                <p>Position Type: @job.PositionType</p>
+                <p>Core Competency: @job.CoreCompetency</p>
+
+            </td>
+
+        </tr>
+
+
+
+
+
+
+
+        @*<tr>
+            <td>@job.Employer</td>
+            <td>@job.Location</td>
+            <td>@job.PositionType</td>
+            <td>@job.CoreCompetency</td>
+            </tr>*@
+
+    }
+</table>
 </div>
