--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -2,6 +2,8 @@
 
     <h1>@ViewBag.title</h1>
 
+
+
     <form action="/search/results" method="post">
         <h2>Search by:</h2>
 
@@ -26,8 +28,32 @@
 
     <hr />
 
-    @{
-        //TODO #4: Loop over the search results to display all job fields.
-    }
+    <!--If the jobs are null the page only shows for the form. else it will show the list of jobs of categiries right under the form-->
+    @if (ViewBag.jobs != null)
+    {
+    
+
+            @foreach (var job in ViewBag.jobs)
+            {
+
+
+
+
+                <tr>
+                    <td>
+                        <p>Id: @job.Id</p>
+                        <p>Name: @job.Name</p>
+                        <p>Location: @job.Location</p>
+                        <p>Employee: @job.Employer</p>
+                        <p>Position Type: @job.PositionType</p>
+                        <p>Core Competency: @job.CoreCompetency</p>
+
+                    </td>
+
+                </tr>
+            }
+
+        }
+          
 
 </div>
