Bonus mission -1 completed

--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -5,7 +5,7 @@
     @{
         //TODO #1: Use a loop to display job results in a table.
     }
-<table id="customers">
+<table id="job-listing">  <!--Job-listing class provided in instruvtions-->
     
     @foreach (var job in ViewBag.jobs)
     {
