--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="container body-content">
 
-    <h1>@ViewBag.title !!!</h1>
+    <h1>@ViewBag.title</h1>
 
     @{
         //TODO #1: Use a loop to display job results in a table.
@@ -17,10 +17,10 @@
             <td>
                 <p>Id: @job.Id</p>
                 <p>Name: @job.Name</p>
-                <p>Location: @job.Location</p>
-                <p>Employee: @job.Employer</p>
-                <p>Position Type: @job.PositionType</p>
-                <p>Core Competency: @job.CoreCompetency</p>
+                <p>Location: <a asp-controller="List" asp-action="Jobs" asp-route-column="location" asp-route-value="@job.Location">@job.Location</a></p>
+                <p>Employee: <a asp-controller="List" asp-action="Jobs" asp-route-column="employer" asp-route-value=@job.Employer>@job.Employer</a></p>
+                <p>Position Type:<a asp-controller="List" asp-action="Jobs" asp-route-column="positionType" asp-route-value=@job.PositionType>@job.PositionType</a></p>
+                <p>Core Competency:<a asp-controller="List" asp-action="Jobs" asp-route-column="coreCompetency" asp-route-value=@job.CoreCompetency>@job.CoreCompetency</a></p>
 
             </td>
 
