--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -38,18 +38,19 @@
         @foreach (var job in ViewBag.jobs)
         {
 
-
+           
             <table class="job-listing">
                 <!--Job-listing class provided in instruvtions-->
 
                 <tr>
                     <td>
+
                         <p>Id: @job.Id</p>
-                        <p>Name: @job.Name</p>
-                        <p>Location: @job.Location</p>
-                        <p>Employee: @job.Employer</p>
-                        <p>Position Type: @job.PositionType</p>
-                        <p>Core Competency: @job.CoreCompetency</p>
+                        <p>Name: @job.Name </p>
+                        <p>Location:  <a asp-controller="List" asp-action="Jobs" asp-route-column="location" asp-route-value=@job.Location>@job.Location</a></p>
+                        <p>Employee: <a asp-controller="List" asp-action="Jobs" asp-route-column="employer" asp-route-value=@job.Employer>@job.Employer</a></p>
+                        <p>Position Type: <a asp-controller="List" asp-action="Jobs" asp-route-column="positionType" asp-route-value=@job.PositionType>@job.PositionType</a></p>
+                        <p>Core Competency: <a asp-controller="List" asp-action="Jobs" asp-route-column="coreCompetency" asp-route-value=@job.CoreCompetency>@job.CoreCompetency</a></p>
 
                     </td>
 
@@ -59,5 +60,5 @@
 
     }
 
-   
+
 </div>
